<resources>
    <string name="app_name">Quản lý quán cà phê</string>
    <string name="AVAILABLE">Có sẵn</string>
    <string name="BUSY">Có khách</string>
    <string name="CLEAN">Dọn dẹp</string>
    <string name="BOOKED">Đặt trước</string>
    <string name="TABLE_NUM">Bàn số</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="user_password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="user_error">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="TABLE_DESCRIPTION">hình cái bàn</string>
    <string name="TABLE_LIST">Danh sách bàn</string>
    <string name="PRICE">Đơn giá</string>
    <string name="NUMBER">Số lượng:</string>
    <string name="PASSWORD_REMEMBER">Nhớ mật khẩu</string>
    <string name="State">Trạng thái:</string>
    <string name="Black_coffee">Cà phê đen</string>
    <string name="Coffee_milk">Cà phê sữa</string>
    <string name="Black_coffee_SG">Cà phê đen Sài Gòn</string>
    <string name="Coffee_milk_SG">Cà phê sữa Sài Gòn</string>
    <string name="Orange_juice">Nước cam</string>
    <string name="Lemon_juice">Nước chanh</string>
    <string name="Pepsi">Pepsi</string>
    <string name="Yellow_sting">Sting vàng</string>
    <string name="Strawberry_sting">Sting dâu</string>
    <string name="Aquafina">Nước suối Aquafina</string>
    <string name="Setting">Cài đặt</string>
    <string name="Order">Gọi món</string>
    <string name="Pay">Thanh toán</string>
    <string name="Time">Thời gian: ...</string>
    <string name="list_food">Danh sách đồ uống</string>
    <string name="Id">STT</string>
    <string name="Name">Tên</string>
    <string name="Number_short">SL</string>
    <string name="Total">Thành tiền</string>
    <string name="Done_cleaned">Dọn dẹp xong</string>
    <string name="Confirm">Xác nhận</string>
    <string name="add_note">Thêm ghi chú</string>
    <string name="continue_menu">Tiếp tục chọn</string>
    <string name="OK">OK</string>
    <string name="Detail">Chi tiết</string>
    <string name="Hide">Ẩn</string>
    <string name="Visible">Hiển thị</string>
    <string name="Logout">Đăng xuất</string>
    <string name="Back">Trở lại</string>
    <string name="Menu">Thực đơn</string>
    <string name="Confirm_Payment">Xác nhận thanh toán?</string>
    <string name="Cancel">Hủy</string>
    <string name="Confirm_Logout">Bạn có muốn đăng xuất?</string>
    <string name="Total_money">Thành tiền:</string>
    <string name="Discount">Khuyến mãi:</string>
    <string name="Customer_paid">Khách trả:</string>
    <string name="Rest">Tiền thối lại:</string>
    <string name="Reload">Làm mới</string>
    <string name="VND">VNĐ</string>
    <string name="Finish_Payment">Hoàn tất thanh toán</string>
    <string name="Search">Tìm kiếm</string>

</resources>
